restructuring and shared source as a nuget package

--- a/SubProject-ClassLibrary/SubProject-ClassLibrary.csproj
+++ b/SubProject-ClassLibrary/SubProject-ClassLibrary.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SharedSource-ClassLibrary, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\SubProject-ConsoleApp\packages\SharedSource-ClassLibrary.1.0.0.1\lib\net472\SharedSource-ClassLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,10 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SharedSource\SharedSource-ClassLibrary\SharedSource-ClassLibrary.csproj">
-      <Project>{7c4cac38-fcb9-44a9-b322-9dd0fcf404cd}</Project>
-      <Name>SharedSource-ClassLibrary</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
