--- a/SubProject-ClassLibrary/SubProject-ClassLibrary.nuspec
+++ b/SubProject-ClassLibrary/SubProject-ClassLibrary.nuspec
@@ -13,11 +13,7 @@
     <copyright>Copyright 2021</copyright>
     <tags></tags>
 	<dependencies>
-      <group targetFramework=".NETFramework4.7.2" />
+	  <dependency id="SharedSource-ClassLibrary" version="1.0.0"/>
     </dependencies>
   </metadata>
-  <files>
-	<file src="bin\Release\SubProject-ClassLibrary.dll" target="lib" />
-	<file src="bin\Release\SharedSource-ClassLibrary.dll" target="lib" />
-  </files>
 </package>
