--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "SubProject"]
-	path = SubProject
+[submodule "SharedSource"]
+	path = SharedSource
 	url = https://github.com/AndrewFrazer/SharedSource.git
