--- a/SubProject-ClassLibrary/SubProject-ClassLibrary.csproj
+++ b/SubProject-ClassLibrary/SubProject-ClassLibrary.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SharedSource-ClassLibrary, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\SubProject-ConsoleApp\packages\SharedSource-ClassLibrary.1.0.0.1\lib\net472\SharedSource-ClassLibrary.dll</HintPath>
+      <HintPath>..\bin\Debug\SharedSource-ClassLibrary.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
