--- a/SubProject-ClassLibrary/SubProject-ClassLibrary.nuspec
+++ b/SubProject-ClassLibrary/SubProject-ClassLibrary.nuspec
@@ -13,7 +13,11 @@
     <copyright>Copyright 2021</copyright>
     <tags></tags>
 	<dependencies>
-	  <dependency id="SharedSource-ClassLibrary" version="1.0.0"/>
+      <group targetFramework=".NETFramework4.7.2" />
     </dependencies>
   </metadata>
+  <files>
+	<file src=".\bin\Release\*.dll" target="lib\net472" />
+	<file src=".\bin\Release\*.pdb" target="lib\net472" />
+  </files>
 </package>
